# localmate

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: LoadingSpinner.tsx  ResultPanel.tsx  SettingsScreen.tsx
src/constants/: actions.ts  app.ts
src/hooks/: useGlobalShortcuts.ts  useOllamaHealth.ts  useWindowCollapse.ts
src/prompts/: bugreport.ts  grammar.ts  jira.ts  rewrite.ts  standup.ts  testcase.ts
src/services/: clipboard.ts  ollama.ts
src/utils/: windowAnimation.ts
