[package]
name = "localmate"
version = "0.1.0"
description = "LocalMate - Your LLM Assistant"
authors = ["Ashik Rabbani"]
edition = "2021"

[lib]
name = "LocalMate_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
